--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,7 +181,3 @@ a {
   grid-auto-rows: 200px;
   grid-gap: 20px;
 }
-
-.mod-content-reported {
-
-}
